tests/macros/plugin/validate.stderr
error: option `validate` does not exist for kind `plugin`
 --> $DIR/validate.rs:2:46
  |
2 |     let q = inquisition::questions![plugin { validate: todo!() }];
  |                                              ^^^^^^^^
