tests/macros/plugin/validate.rs
fn main() {
    let q = inquisition::questions![plugin { validate: todo!() }];
}
